<resources>
    <string name="app_name">HungryWolfs</string>
    <string name="home_screen_title">Delicious food for you</string>
    <string name="search">Search</string>
    <string name="category_title">Categories</string>
    <string name="home_title">Home</string>
    <string name="favorites_title">My favourites</string>
    <string name="profile_title">My profile</string>
    <string name="category">Category</string>
    <string name="meal_name">Veggie tomato mix</string>
    <string name="found_results_text">Found x results</string>
    <string name="details">Details</string>
    <string name="details_meal_title">Veggie tomato mix</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="tag_meat">meat</string>
    <string name="checkbox_text">3/4 cup soy sauce</string>
    <string name="text_instructions">Preheat oven to 350. Spray a 9x13-inch backing pan with \n Preheat oven to 350. Spray a 9x13-inch backing pan with non-stick spray.\n\nCombine soy sauce, 1/2 cup water</string>
    <string name="meal_tag_item_text">casserole</string>
    <string name="user_name">Grad Vasile</string>
    <string name="user_email">vasile.grad2@gmail.com</string>
    <string name="user_phone">+40 123 456 789</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="press_long_text">press long on an item to delete</string>
    <string name="favorite_item_view_text">Veggie tomato mix</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="no_internet_connection_description">Your internet connection is currently no available please check or try again.</string>
    <string name="try_again">Try again</string>
    <string name="item_not_found">Item not found</string>
    <string name="try_searching_the_item_description">Try searching the item with a different keyword.</string>
    <plurals name="meals">
        <item quantity="one">Found %d result</item>
        <item quantity="other">Found %d results</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="font_size">Font size</string>
</resources>