<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.hungrywolfs.fragments.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.hungrywolfs.fragments.FavoritesFragment"
        android:label="@string/favorites_title"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.hungrywolfs.fragments.ProfileFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile" />

</navigation>